---------------------------------------------------------------------------------------------------
Version: 1.5.6
Date: 23/1/26
  Balancing:
    - Rebalanced item buffs giving multipliers to strongbox loot value.
    - Rebalanced item buffs giving build distance.
    - Reduced the amount of time that magmatic flames burn on the ground (the fire created from magmatic bullets).
  Bugfixes:
    - Fixed that some quests based on finding trades were not giving their full amount of free hex claims reward.
---------------------------------------------------------------------------------------------------
Version: 1.5.5
Date: 22/1/26
  Bugfixes:
    - Hotfix for game crashing when loading a pre-1.5.3 save and then trying to find more dungeons.
---------------------------------------------------------------------------------------------------
Version: 1.5.4
Date: 22/1/26
  Bugfixes:
    - Hotfix for game sometimes crashing when an entity dies.
---------------------------------------------------------------------------------------------------
Version: 1.5.3
Date: 22/1/26
  Features:
    - Added 5 new quests: "Cracking the Vault", "Lockbreaker", "Automated Clearing", "Trades in Circuitry", "Vulcanus 101".
    - Added Hexadic Resonators (six different power levels) to dungeon chests.
    - Added five new recipes for the "SOVR Enrichment Process", used in massively extending the potency of Hexadic Resonators (get 6x value).
    - Added technology to unlock the new "SOVR Enrichment Process" recipes.
  Minor Features:
    - Added 3 new item buffs: uranium-235, uranium-238, toolbelt equipment.
    - Added 1 new buff type: "Lower Unresearched Penalty".
    - Constant combinators placed next to a hex core are now automatically configured to emit signals for trade item inputs (negative) and outputs (positive).
  Changes:
    - Item buff enhancement (upgrading) is now gated behind the new "Cracking the Vault" quest.