@@ -5,6 +5,7 @@ Date: 23/1/26
     - Rebalanced item buffs giving multipliers to strongbox loot value.
     - Rebalanced item buffs giving build distance.
     - Reduced the amount of time that magmatic flames burn on the ground (the fire created from magmatic bullets).
+    - Remove some of the visual FX of magmatic bullets, improving performance if used in concentrated areas.
   Bugfixes:
     - Fixed that some quests based on finding trades were not giving their full amount of free hex claims reward.
 ---------------------------------------------------------------------------------------------------
